--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ a:focus {
 .home {
 	background: url(../img/pruebas/nivel1.png);
 	position: relative;
+	background-size: cover;
 	width: 100%;
 	height: 50px;
 	overflow: hidden;
@@ -110,7 +111,7 @@ a:focus {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 1;
+	z-index: -99;
 
 }
 .slide {
@@ -1373,4 +1374,12 @@ li {
 	height: 100%;
 	display: block;
 	padding-bottom: 50px;
+}
+.fa-windows, .fa-android{
+	font-size: 1.5em;
+	margin-right:8px;
+}
+.btnwindows{
+	font-size: 1em;
+	padding: 20px 10px;
 }
